@@ -1,3 +1,6 @@
+ * Go back to explicitly storing blank fields in the database
+   (works around bug in keepassx)
+
 KeePassdroid (1.9.8)
  * Fix crashes related to saving missing entries
  * Fix issues with setting wrong expiry date
